[package]
name = "roman"
version = "0.1.0"
edition = "2021"
authors = ["Sergey Pikhota <sergey@pikhota.com>"]
description = "A crate for working with Roman numerals"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Melesar/roman"
categories = ["value-formatting"]

[dependencies]
thiserror = "*"

[dev-dependencies]
anyhow = "*"
