[package]
name = "miv"
version = "0.1.1"
edition = "2021"
authors = ["Sergey Pikhota <sergey@pikhota.com>"]
description = "A crate for working with Roman numerals"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Melesar/miv"
categories = ["value-formatting"]

[dependencies]
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.68"
